[package]
authors = ["ChiHai <ihciah@gmail.com>"]
categories = ["asynchronous", "network-programming"]
description = "Codec for Monoio."
edition = "2021"
keywords = ["runtime", "iouring", "async"]
license = "MIT/Apache-2.0"
name = "monoio-codec"
readme = "README.md"
repository = "https://github.com/monoio-rs/monoio-codec"
version = "0.3.4"

[dependencies]
bytes = { version = "1" }
monoio = { version = "0.2.4", default_features = false, features = ["bytes"], git = "https://github.com/ndrscodes/monoio.git" }
tokio-util = { version = "0.7", default_features = false, features = ["codec"] }

[dev-dependencies]
monoio = { version = "0.2.4", features = ["macros"], git = "https://github.com/ndrscodes/monoio.git" }
